# Widget2

./: .flake8  pyproject.toml
src/: masks.py  processing.py
